# slony-exporter

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/metrics/: mod.rs
src/slony/: mod.rs
